# lsdo_geo

./: .gitignore  OLD_setup.py  README.md  pyproject.toml  release_notes.md  requirements.txt  setup.py  structural_mesh_displacements.txt  u_vec.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: actions.yml
docs/: conf.py
examples/advanced_examples/: ex_lift_plus_cruise.py  ex_rectangular_wing_with_shape.py  fishy.py  incomplete_ex_tbw.py
examples/basic_examples/: ex_lift_plus_cruise.py  ex_lift_plus_cruise_new.py  ex_lift_plus_cruise_old.py  ex_rectangular_wing.py  ex_rectangular_wing_new.py  ex_rectangular_wing_temp.py  ex_rectangular_wing_toy_optimization.py  lift_plus_cruise_visualizations.py  lift_plus_cruise_visualizations_newish.py  testing_rotations.py
examples/example_geometries/: long_box.stp  rectangular_wing.stp  simple_wing.stp
lsdo_geo/: __init__.py  mesh.py
lsdo_geo/csdl/: optimization.py
lsdo_geo/cython/: Projection_point_method.py  basis0.pxd  basis0.pyx  basis1.pxd  basis1.pyx  basis2.pxd  basis2.pyx  basis_matrix_curve.pxd  basis_matrix_curve.pyx  basis_matrix_curve_py.pyx  basis_matrix_surface.pxd  basis_matrix_surface.pyx  basis_matrix_surface_py.pyx  basis_matrix_volume.pxd  basis_matrix_volume.pyx  basis_matrix_volume_py.pyx  bspline_curve_comp.py  bspline_surface_comp.py  curve_projection.pxd  curve_projection.pyx  curve_projection_py.pyx  get_open_uniform.pxd  get_open_uniform.pyx  get_open_uniform_py.pyx  linear_distr_comp.py  lsq_fit.py  sample_test_axis_surface_projection.py  sample_test_basis_matrix_curve.py  sample_test_basis_matrix_surface.py  sample_test_basis_matrix_volume.py  sample_test_curve_projection.py  sample_test_surface_projection.py  (+8 more)
records/: record_force_input.h5  record_force_input.xdmf  record_structural_mesh_displacements.h5  record_structural_mesh_displacements.xdmf  record_u.h5  record_u.xdmf
temp/: E.h5  nu.h5  nu.xdmf  pressure_input.h5
(+216 files in other folders)
