[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdo_geo"
description = "A package for geometry and state modeling/representation, parameterization, and mesh creation for MDO."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["geoemtry", "parameterization", "meshing", "representation", "modeling", "states"]
authors = [{name = "Andrew Fletcher", email = "afletcher168@gmail.com"}]
dependencies = [
    'numpy',
    'vedo',
    'joblib',
    'pandas',
    'scipy',
    'csdl_alpha @ git+https://github.com/LSDOlab/CSDL_alpha.git',
    'lsdo_function_spaces @ git+https://github.com/LSDOlab/lsdo_function_spaces.git'
]
version = "0.1.0"

[project.optional-dependencies]
test = ['pytest']
docs = [
    'myst-nb',
    'sphinx==5.3.0',
    'sphinx_rtd_theme',
    'sphinx-copybutton',
    'sphinx-autoapi==2.1.0',
    'astroid==2.15.5',
    'numpydoc',
    'gitpython',
    'sphinxcontrib-collections @ git+https://github.com/anugrahjo/sphinx-collections.git',
    'sphinxcontrib-bibtex',
]

[tool.setuptools.packages.find]
exclude = ["tutorials"]