[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "lsdo_geo"
description = "A package for geometry and state modeling/representation, parameterization, and mesh creation for MDO."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.txt"}
keywords = ["geoemtry", "parameterization", "meshing", "representation", "modeling", "states"]
authors = [{name = "Andrew Fletcher", email = "afletcher168@gmail.com"}]
dependencies = []
version = "0.1.0"

[project.optional-dependencies]
test = ['pytest']
docs = []

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
exclude = ["tutorials"]